[metadata]
name = cmakeast
author = Sam Spilsbury
author_email = smspillaz@gmail.com
license = MIT
description = Parse a CMake file into an Abstract Syntax Tree.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = development, ast, cmake
url = http://github.com/polysquare/cmake-ast
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
install_requires = setuptools; setuptools-scm
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
include_package_data = True

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts = cmake-print-ast=cmakeast.printer:main

[options.extras_require]
upload = setuptools-markdown
